<resources>
    <string name="app_name">GeekProject</string>

    <string name="tv_header_skin">个性换肤</string>
    <string name="tv_header_main">首页</string>
    <string name="tv_header_calendar">程序猿老黄历</string>
    <string name="tv_header_map">地图</string>
    <string name="tv_header_about">关于</string>
    <string name="tv_header_setting">设置</string>
    <string name="tv_header_jni">jni</string>
    <string name="tv_header_map_test">地图测试</string>
    <string name="tv_header_client">客户端</string>
    <string name="tv_header_server">服务端</string>
    <string name="tv_header_feedback">意见反馈</string>
    <string name="tv_header_quit">退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="img_open_left_menu">打开侧滑菜单</string>

    <string name="error_wifi">混蛋，没有网还想看妹子！！！</string>
    <string name="error_no_data">禽兽，妹子拒绝了你的请求！</string>
    <string name="error_lazy">程序员哥哥偷懒去了，快去举报他</string>
    <string name="error_network">网络错误</string>

    <string name="img_des_gank_day_girl">妹纸</string>
    <string name="double_click_exit">再按一次退出程序</string>

    <string name="gank_symbol">&#032; &#187;</string>

    <string name="about_addr">https://github.com/BirdGuo/GeekProject</string>//项目地址
    <string name="about_author">作者:BirdGuo</string>
    <string name="github_issues">您好，您有什么好的意见可以及时向我反馈，您可以在GitHub或者开源中国的Issues处说明问题原因，也可以通过以下方式联系我，我将根据情况尽量处理哦 ~</string>
    <string name="about_project">项目简介:\nGeekProject,使用kotlin编写，集成GankIO API，参考并加入了程序猿老黄历。该项目会持续迭代与优化,加入更丰富的内容与功能,并不断尝试最新的技术,欢迎star、fork、issue\n点击下面的项目链接给个star吧,您的star就是对我最大的支持。</string>

    <string name="tv_feedback_issues">Issues</string>
    <string name="tv_feedback_issues_name">GankIO</string>
    <string name="tv_feedback_connect">联系我</string>
    <string name="tv_feedback_qq">QQ</string>
    <string name="copy_success">复制成功</string>
    <string name="img_beauty">妹纸</string>
    <string name="date">日期</string>
    <string name="tv_calendar_good">宜</string>
    <string name="tv_calendar_bad">忌</string>
    <string name="tv_calendar_seat_direction">座位朝向：</string>
    <string name="tv_calendar_drink">今日宜饮：</string>
    <string name="tv_calendar_beauty">女神亲近指数：</string>

    <string name="tv_tab_android">Android</string>
    <string name="tv_tab_ios">iOS</string>
    <string name="tv_setting_map">默认地图</string>

    <string name="et_client_ip_address">IP地址</string>
    <string name="et_client_port_number">端口号</string>
    <string name="et_client_message">消息</string>
    <string name="btn_client_start">发送</string>

    <string name="et_server_port_number">端口号</string>
    <string name="btn_server_start">开始</string>
</resources>
