<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.guoxw.geekproject.socket.ClientActivity">

    <EditText
        android:id="@+id/et_client_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_client_ip_address">

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/et_client_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_client_port_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_client_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_client_message" />

    <Button
        android:id="@+id/btn_client_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_client_start" />

    <ScrollView
        android:id="@+id/log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0">

        <TextView
            android:id="@+id/log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>
