<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guoxw.geekproject.gankio.ui.fragment.FragmentGank">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.TabLayout
        android:id="@+id/tbl_gank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img_beauty" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tab_android" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tab_ios" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_gank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tbl_gank" />


</RelativeLayout>
