<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_nav_deed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBg"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/shape_notclickbg"
        android:lineSpacingExtra="@dimen/dp_2"
        android:padding="@dimen/dp_12"
        android:text="@string/github_issues"
        android:textColor="#666666"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/dp_10"
            android:text="@string/tv_feedback_issues"
            android:textColor="@color/colorTabText"
            android:textSize="@dimen/sp_13" />


        <TextView
            android:id="@+id/tv_issues"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/ripple_item_white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_12"
            android:text="@string/tv_feedback_issues_name"
            android:textColor="@color/comment_text"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/dp_10"
            android:text="@string/tv_feedback_connect"
            android:textColor="@color/colorTabText"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ripple_item_white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_12"
            android:text="@string/tv_feedback_qq"
            android:textColor="@color/comment_text"
            android:textSize="@dimen/sp_16" />

        <View
            style="@style/home.horizontalLine"
            android:layout_marginLeft="@dimen/dp_10" />

    </LinearLayout>
</LinearLayout>
